fix: settings overflow

--- a/src/styles/playground/_settings.css
+++ b/src/styles/playground/_settings.css
@@ -57,6 +57,8 @@
 }
 
 .settings-tab {
+	overflow: auto;
+
 	section {
 		padding: 10px;
 	}
